@@ -27,6 +27,15 @@
 
 #import <Foundation/Foundation.h>
 
+#if defined(__APPLE__) && (MAC_OS_X_VERSION_MAX_ALLOWED <= MAC_OS_X_VERSION_10_4)
+#ifndef NSUInteger
+#define NSUInteger unsigned int
+#endif
+#ifndef NSInteger
+#define NSInteger int
+#endif
+#endif
+
 #ifndef ASSIGN
 #define ASSIGN(object,value)    ({\
   id __object = object; \
